--- a/.github/workflows/id.yml
+++ b/.github/workflows/id.yml
@@ -2,7 +2,7 @@ name: ID_ADDER
 on: [pull_request]
 
 jobs:
-  validation:
+  id:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,6 +17,7 @@ jobs:
       - uses: phoenixorigin/id_script@v0.1
         with:
           files: ${{ steps.files.outputs.all }}
+      - run: echo ${{ steps.files.outputs.all }}
       - uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
