--- a/.github/workflows/id.yml
+++ b/.github/workflows/id.yml
@@ -14,7 +14,7 @@ jobs:
         uses: jitterbit/get-changed-files@v1
         with:
           format: 'space-delimited'
-      - uses: phoenixorigin/id_script@v0.1.12
+      - uses: phoenixorigin/id_script@master
         with:
           files: ${{ steps.files.outputs.all }}
       - run: echo ${{ steps.files.outputs.all }} 
