--- a/.github/workflows/id.yml
+++ b/.github/workflows/id.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           files: ${{ steps.files.outputs.all }}
       - run: echo ${{ steps.files.outputs.all }} 
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_user_name: 'Github ID Script'
-          commit_user_email: 'randomradnom@gmail.com'
-          commit_message: 'add user id'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit
+              run: |
+                  git config --local user.email "actions@github.com"
+                  git config --local user.name "GitHub Actions"
+                  git add website/rss.xml
+                  git commit -m "update domains"
+                  git push
