--- a/.github/workflows/id.yml
+++ b/.github/workflows/id.yml
@@ -22,6 +22,6 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add ./*
+          git add /*
           git commit -m "update domains"
           git push
